After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773228 - third parameter of gtk_widget_intersect not listed as 'out'
third parameter of gtk_widget_intersect not listed as 'out'
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Language Bindings
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-10-19 17:27 UTC by benjamin.franksen
Modified: 2017-03-30 09:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtk_widget_intersect: fix annotations (963 bytes, patch)
2017-03-30 08:46 UTC, Christoph Reiter (lazka)
committed Details | Review

Description benjamin.franksen 2016-10-19 17:27:14 UTC
The parameter is named 'intersection' and is obviously for output but the 'out' direction flag is missing, causing automatic language bindings to produce bad code. This can also be seen in the documentation, see https://developer.gnome.org/gtk3/stable/GtkWidget.html#gtk-widget-intersect .
Comment 1 Christoph Reiter (lazka) 2017-03-30 08:46:50 UTC
Created attachment 348976 [details] [review]
gtk_widget_intersect: fix annotations
Comment 2 Emmanuele Bassi (:ebassi) 2017-03-30 09:05:47 UTC
Review of attachment 348976 [details] [review]:

Looks good.
Comment 3 Christoph Reiter (lazka) 2017-03-30 09:20:34 UTC
Thanks. Pushed to 3-22 and master.