gtk_widget_intersect: fix annotations

https://bugzilla.gnome.org/show_bug.cgi?id=773228