gtk/gtkwidget.c
@@ -7892,7 +7892,8 @@ gtk_widget_reparent (GtkWidget *widget,
  * gtk_widget_intersect:
  * @widget: a #GtkWidget
  * @area: a rectangle
- * @intersection: (nullable): rectangle to store intersection of @widget and @area
+ * @intersection: (out caller-allocates) (optional): rectangle to store
+ *   intersection of @widget and @area
  *
  * Computes the intersection of a @widget’s area and @area, storing
  * the intersection in @intersection, and returns %TRUE if there was
